--- a/404-game-master/index.html
+++ b/404-game-master/index.html
@@ -53,7 +53,7 @@
              }
              var counter=setStorage();
              var oBox=document.getElementById('box');
-             oBox.innerHTML="来访记录:"+counter+"次";            
+             oBox.innerHTML="来访记录:"+counter+"次@小川";            
          </script>
   
 </body>
