--- a/404-game-master/index.html
+++ b/404-game-master/index.html
@@ -23,7 +23,7 @@
   <div class="NotFound_div">
     <div class="Not-Found-game">
       <h1 class="web" >排球少年</h1>
-      <h1 class="mobile">飞吧</h1>
+      <h1 class="mobile">排球少年</h1>
       <span id="pleasantly">↑↑↑按下空格键有惊喜</span><br />
 	  <span id="box"></span>
     </div>
